--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p>On-demand alcohol delivery service, powered by Pembo.ai</p>
           <a href="#" class="button dark-btn">View Case Study</a>
         </div>
-        <div class="use-case-image">
+        <div class="use-case-imagee">
           <img src="wine11.png" alt="Wine11 platform screenshot" />
         </div>
       </div>
