--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">Platform</a>
         <a href="#solution">Solution</a>
         <a href="#about">About</a>
-        <button class="cta-nav">Request Access</button>
+        <button class="cta-nav" href="mailto:wine11dev@gmail.com">Request Access</button>
       </div>
     </nav>
 
@@ -26,8 +26,8 @@
             high-intent shoppers.
           </p>
           <div class="hero-buttons">
-            <a href="#" class="button primary">Request Early Access</a>
-            <a href="#" class="button secondary">Contact Us</a>
+            <a href="mailto:wine11dev@gmail.com" class="button primary">Request Early Access</a>
+            <a href="mailto:wine11dev@gmail.com" class="button secondary">Contact Us</a>
           </div>
         </div>
         <div class="hero-image">
@@ -100,7 +100,7 @@
         <div class="use-case-text">
           <h3>wine11</h3>
           <p>On-demand alcohol delivery service, powered by Pembo.ai</p>
-          <a href="#" class="button dark-btn">View Case Study</a>
+          <a href="https://www.wine11.ai/" class="button dark-btn">View Case Study</a>
         </div>
         <div class="use-case-imagee">
           <img src="wine11.png" alt="Wine11 platform screenshot" />
@@ -143,7 +143,7 @@
 
     <footer class="footer">
       <h3>Ready to Transform Your E-commerce?</h3>
-      <button class="cta">Request a Demo</button>
+      <button class="cta" href="mailto:wine11dev@gmail.com">Request a Demo</button>
       <p>&copy; 2025 Pembo.ai. All rights reserved.</p>
     </footer>
   </body>
