--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">Platform</a>
         <a href="#solution">Solution</a>
         <a href="#about">About</a>
-        <button class="cta-nav" href="mailto:wine11dev@gmail.com">Request Access</button>
+        <button class="cta-nav"  onclick="window.location.href='mailto:wine11dev@gmail.com'">Request Access</button>
       </div>
     </nav>
 
@@ -143,7 +143,7 @@
 
     <footer class="footer">
       <h3>Ready to Transform Your E-commerce?</h3>
-      <button class="cta" href="mailto:wine11dev@gmail.com">Request a Demo</button>
+      <button class="cta" onclick="window.location.href='mailto:wine11dev@gmail.com'">Request a Demo</button>
       <p>&copy; 2025 Pembo.ai. All rights reserved.</p>
     </footer>
   </body>
